--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="contructor_ru"> Конструктор тестов  </string>
 
     <string name="buttonCreate_ru"> Создать тест</string>
-    <string name="buttonDelete_ru"> Удалить тест</string>
+    <string name="buttonChange_ru"> Изменить тест</string>
 
     <string name="antiquity_ru">История Беларуси с древнейших времен до середины ХІІІ в.</string>
     <string name="antiquity_by">Гісторыя Беларусі са старажытных часоў да сярэдзіны ХІІІ ст.</string>
