--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -41,6 +41,7 @@
     <string name="cancel">Отмена</string>
     <string name="delete">Удалить</string>
     <string name="confirmationDelete">Хотите удалить тест?</string>
+    <string name="rollUp">При сворачивании приложения будет выставлена оценка 0</string>
 
 
 </resources>
