updated client-server interaction

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -26,6 +26,7 @@
     <string name="next">Далей</string>
 
     <string name="buttonCreate"> Стварыць тэст</string>
+    <string name="buttonUpload"> Загрузіць на сервер</string>
     <string name="buttonChange"> Змяніць тэст</string>
 
     <string name="antiquity">Гісторыя Беларусі са старажытных часоў да сярэдзіны ХІІІ ст.</string>
